// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI: push > push --format=json --dry-run -C ./examples --parameter flag:bool:true --parameter num:INTGER:1 1`] = `
[
  "{\\"name\\":\\"bigquery-porter/sandbox/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@MODELS/mymodel/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@models/mymodel/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@ROUTINES/sample_function/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@routines/sample_function/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@ROUTINES/sample_procedure/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@routines/sample_procedure/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true,\\"totalSlotMs\\":0}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@ROUTINES/sample_tvf/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@routines/sample_tvf/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/error_sample/ddl.sql\\",\\"error\\":\\"A SQL query string is required.\\"}",
  "{\\"name\\":\\"bigquery-porter/sandbox/error_sample/test.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/error_sample/test.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/error_sample/view.sql\\",\\"error\\":\\"Syntax error: Expected \\\\\\"(\\\\\\" or keyword SELECT or keyword WITH but got identifier \\\\\\"hoge\\\\\\" at [3:1]\\"}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_clone_table/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_clone_table/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_partition_table/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_partition_table/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_sharding_*/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_sharding_@/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true,\\"totalSlotMs\\":0}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_snapshot_table/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_snapshot_table/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_table/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_table/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_view/view.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_view/view.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@_QUERIES/preview.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@_queries/preview.sql\\",\\"totalBytesProcessed\\":8,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_materialized_view/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_materialized_view/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_table/preview.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_table/preview.sql\\",\\"totalBytesProcessed\\":8,\\"isDryRun\\":true}}",
]
`;

exports[`CLI: push > push --format=json --dry-run -C ./examples --parameter flag:bool:true --parameter num:INTGER:1 2`] = `
[
  "Warning: Irrelevant SQL file located in examples/@default/sandbox/error_sample/ddl.sql for bigquery-porter.sandbox.error_sample",
  "Warning: Irrelevant SQL file located in examples/@default/sandbox/error_sample/test.sql for bigquery-porter.sandbox.error_sample",
  "Some tasks are failed(Failed: 2)
",
]
`;

exports[`CLI: push > push --format=json --dry-run -C ./examples 1`] = `
[
  "{\\"name\\":\\"bigquery-porter/sandbox/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@MODELS/mymodel/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@models/mymodel/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@ROUTINES/sample_function/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@routines/sample_function/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@ROUTINES/sample_procedure/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@routines/sample_procedure/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true,\\"totalSlotMs\\":0}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@ROUTINES/sample_tvf/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@routines/sample_tvf/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/error_sample/ddl.sql\\",\\"error\\":\\"A SQL query string is required.\\"}",
  "{\\"name\\":\\"bigquery-porter/sandbox/error_sample/test.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/error_sample/test.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/error_sample/view.sql\\",\\"error\\":\\"Syntax error: Expected \\\\\\"(\\\\\\" or keyword SELECT or keyword WITH but got identifier \\\\\\"hoge\\\\\\" at [3:1]\\"}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_clone_table/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_clone_table/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_partition_table/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_partition_table/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_sharding_*/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_sharding_@/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true,\\"totalSlotMs\\":0}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_snapshot_table/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_snapshot_table/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_table/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_table/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_view/view.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_view/view.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/@_QUERIES/preview.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/@_queries/preview.sql\\",\\"totalBytesProcessed\\":8,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_materialized_view/ddl.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_materialized_view/ddl.sql\\",\\"totalBytesProcessed\\":0,\\"isDryRun\\":true}}",
  "{\\"name\\":\\"bigquery-porter/sandbox/sample_table/preview.sql\\",\\"result\\":{\\"file\\":\\"examples/@default/sandbox/sample_table/preview.sql\\",\\"totalBytesProcessed\\":8,\\"isDryRun\\":true}}",
]
`;

exports[`CLI: push > push --format=json --dry-run -C ./examples 2`] = `
[
  "Warning: Irrelevant SQL file located in examples/@default/sandbox/error_sample/ddl.sql for bigquery-porter.sandbox.error_sample",
  "Warning: Irrelevant SQL file located in examples/@default/sandbox/error_sample/test.sql for bigquery-porter.sandbox.error_sample",
  "Some tasks are failed(Failed: 2)
",
]
`;

exports[`CLI: push > push --format=json -C ./examples 1`] = `30`;

exports[`CLI: push > push --format=json -C ./examples 2`] = `
[
  "Warning: Irrelevant SQL file located in examples/@default/sandbox/error_sample/ddl.sql for bigquery-porter.sandbox.error_sample",
  "Warning: Irrelevant SQL file located in examples/@default/sandbox/error_sample/test.sql for bigquery-porter.sandbox.error_sample",
  "Some tasks are failed(Failed: 4)
",
]
`;

exports[`CLI: push > push --help 1`] = `
[
  "Usage: program push [options] [projects...]

Deploy your local BigQuery Resources in topological-sorted order

Options:
  --force                                   Force to apply changes such as deletion without confirmation (default: false)
  --label <key:value...>                    A label to set on a query job. The format is \\"key:value\\"; repeat this option to specify a list of values
  -p, --parameter <key:value...>            Either a file containing a JSON list of query parameters, or a query parameter in the form \\"name:type:value\\". An empty name produces a positional parameter. The type may be omitted to assume STRING: name::value or ::value. The value \\"NULL\\" produces a null value. repeat this option to specify a list of values
  --maximum_bytes_billed <number of bytes>  The upper limit of bytes billed for the query.
  --dry-run                                 Dry Run (default: false)
  -h, --help                                display help for command
",
]
`;

exports[`CLI: push > push --help 2`] = `[]`;
